RESOLVED FIXED108265
Temporarily disable assertions related to clip rect computation in RenderLayer
https://bugs.webkit.org/show_bug.cgi?id=108265
Summary Temporarily disable assertions related to clip rect computation in RenderLayer
Simon Fraser (smfr)
Reported 2013-01-29 17:11:53 PST
Temporarily disable assertions related to clip rect computation in RenderLayer
Attachments
Patch (2.09 KB, patch)
2013-01-29 17:13 PST, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2013-01-29 17:13:20 PST
WebKit Review Bot
Comment 2 2013-01-30 09:41:16 PST
Comment on attachment 185352 [details] Patch Clearing flags on attachment: 185352 Committed r141278: <http://trac.webkit.org/changeset/141278>
WebKit Review Bot
Comment 3 2013-01-30 09:41:19 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.