Temporarily disable assertions related to clip rect computation in RenderLayer https://bugs.webkit.org/show_bug.cgi?id=108265

Reviewed by Dean Jackson.

These assertions are killing the test bots, so disable them temporarily
until we figure out the underlying bug (tracked by https://bugs.webkit.org/show_bug.cgi?id=103432).

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::updateLayerPositionsAfterScroll):


Canonical link: https://commits.webkit.org/126558@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141278 268f45cc-cd09-0410-ab3c-d52691b4dbfc